fixed spacing

--- a/public/style.css
+++ b/public/style.css
@@ -28,7 +28,7 @@ body {
     -o-transition-property: opacity;
     transition-property: opacity;
     text-align: center;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 h1 {
@@ -99,6 +99,11 @@ h1 {
     left: 500px;
 }
 
+.nav-tabs {
+    width: 100%;
+    height: 6em !important;
+}
+
  .nav-item {
     /*border-style: inset;*/
    /* border: 1px solid darkgray;*/
@@ -137,7 +142,7 @@ h1 {
     /*font-size: 4.53vw;*/
     font-size: 3.73em;
     float: left;
-    top: 0.2em;
+    top: 0.0em;
     opacity: 0.7;
     width: 50px;
 }
@@ -149,9 +154,9 @@ h1 {
     position: relative;
     left: 100px;
     /*top: -42px;*/
-    top: -2.7em;
+    top: -2.6em;
     font-family: Arvo, sans-serif;
-    width: 200px;
+    width: 9em;
     text-align: center;
 
 }
@@ -411,7 +416,7 @@ a:hover {
 .nav-container {
     display: inline-flex;
     margin-left: -6em;
-    margin-top: 2em;
+    margin-top: 1em;
 }
 .nav-link.active:hover {
     /*color: black !important;*/
@@ -827,7 +832,7 @@ hr {
   .card-title {
       color: goldenrod;
       font-family: 'Permanent Marker', cursive !important;
-      font-size: 0.8em;
+      font-size: 0.95em !important;
   }
   
   .card-body {
@@ -889,7 +894,7 @@ hr {
     /*min-height: 270px;*/
    /* background: #f9f9f9; */
    /*font-size: 1.072vw !important;*/
-   font-size: 0.75em !important;
+   font-size: 0.70em !important;
     color: #f9f9f9;
     text-align: center;
     text-decoration: none !important;
@@ -963,7 +968,7 @@ hr {
   
   .fa-arrow-alt-circle-up {
       position: fixed;
-      top: 7em;
+      top: 9.2em;
       /*font-size: 60px;*/
       /*font-size: 4.17vw;*/
       font-size: 4.17em;
@@ -976,7 +981,7 @@ hr {
       
       top: -0px;*/
       /*left: 65rem;*/
-      left: 16em;
+      left: 18em;
       z-index: 100;
       border-radius: 50% !important;
       transition: opacity 0.3s;
